fix(design-system):storybook fonts

--- a/packages/amplication-design-system/.storybook/preview-head.html
+++ b/packages/amplication-design-system/.storybook/preview-head.html
@@ -1,14 +1,4 @@
 <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel=”preload”
-    />
-    <!-- rolwinnnnn-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
-      rel=”preload”
-    />
-    <!-- DM Mono Font-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&display=swap"
-      rel=”preload”
-    />
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  rel="stylesheet"
+/>
