disable hubspot chat loading as soon as possible

--- a/packages/amplication-client/public/index.html
+++ b/packages/amplication-client/public/index.html
@@ -113,6 +113,12 @@
       defer
       src="//js-eu1.hs-scripts.com/25691669.js"
     ></script>
+    <script>
+      window.hsConversationsSettings = {
+        loadImmediately: false,
+        inlineEmbedSelector: "#amplication-chat",
+      };
+    </script>
     <!-- End of HubSpot Embed Code -->
   </head>
   <body>
